@@ -1,1 +1,1 @@
-SUBDIRS = test lorenz stiff mechanical bench bistable performance newton modeling
+SUBDIRS = test lorenz stiff mechanical bench bistable performance newton modeling radiation-diffusion
